...
              icon: Text('🔍', style: TextStyle(fontSize: 24)), label: 'ค้นหางาน'),
          BottomNavigationBarItem(
              icon: Text('📋', style: TextStyle(fontSize: 24)), label: 'งานของฉัน'),
          BottomNavigationBarItem(
              icon: Text('💰', style: TextStyle(fontSize: 24)), label: 'รายได้'),
          BottomNavigationBarItem(
              icon: Text('👤', style: TextStyle(fontSize: 24)), label: 'โปรไฟล์'),
        ],
      ),
    );
  }
}

